--- a/.github/workflows/create-hotfix-branch-v3.yml
+++ b/.github/workflows/create-hotfix-branch-v3.yml
@@ -11,11 +11,11 @@ jobs:
   create-branch:
     name: Create new hotfix branch v3
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v3-production'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Create branch
         uses: peterjgrainger/action-create-branch@v2.4.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: 'hotfix-v3/${{ github.event.inputs.hotfix_name }}'
+          branch: 'v3-hotfix/${{ github.event.inputs.hotfix_name }}'
